# QTaskList-Exemple

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.bat  make.bat
resources/qrc/: icons.qrc
resources/ts/: QTaskList-Exemple_fr_FR.ts
scripts/: install.bat  make.bat  update_ts.bat
src/: main.cpp  version.h
src/utils/: kitsu_utils.cpp  kitsu_utils.h  network_utils.cpp  network_utils.h  qt_utils.cpp  qt_utils.h
src/widgets/: connection_dialog.cpp  connection_dialog.h  loading_button.cpp  loading_button.h  main_window.cpp  main_window.h  menu_bar.cpp  menu_bar.h  task_browser.cpp  task_browser.h  task_loader.cpp  task_loader.h  task_menu.cpp  task_menu.h
